Wed Sep 25 09:53:11 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Fix CVE-2013-4363.  Miscellaneous minor improvements.

	* test/rubygems:  Tests for the above.

Tue Sep 24 17:38:56 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_inspect): get rid of out-of-bound access.

	* string.c (rb_str_inspect): when a UTF-16/32 string doesn't have a
	  BOM, inspect as a dummy encoding string.

Tue Sep 24 17:15:10 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/encdb.c (ENC_DUMMY_UNICODE): make BOM-encodings dummy.

	* encoding.c (enc_autoload): keep dummy encodings dummy.

Tue Sep 24 16:41:15 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32/lib/win32/registry.rb (Win32::Registry#write): data size
	  is in bytes, not chars.  terminators should be placed automatically.

Tue Sep 24 16:39:36 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32/lib/win32/registry.rb (Win32::Registry#each_value): encode
	  name.

	* ext/win32/lib/win32/registry.rb (Win32::Registry#each_key): ditto.

	* ext/win32/lib/win32/registry.rb (Win32::Registry#export_string):
	  encode to locale encoding if default internal is not set.

Tue Sep 24 16:35:09 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32/lib/win32/registry.rb (Win32::Registry::API#EnumKey):
	  size of the name is in WCHARs, not in bytes.

Tue Sep 24 14:07:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* gc.c (free_method_cache_entry_i): unused function

	* gc.c (rb_free_mc_table): ditto

	* internal.h (method_cache_entry_t): unused struct

	* vm_method.c (verify_method_cache): remove unused variable

	* vm_method.c (rb_method_entry): ditto

Tue Sep 24 14:01:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* class.c (class_alloc): remove mc_tbl

	* gc.c (obj_free): ditto

	* internal.h (struct rb_classext_struct): ditto

	* method.h (rb_method_entry): remove ent param

	* vm_method.c: restore the global method cache. Per class cache tables